projects/compiler/test/parser/import_error_alias_no_alias_eof.out
Error at %FILE_NAME%:1:17
Unexpected end of file:
  |  import "./abc" as
                     ^